package org.example;

public interface Programa {
    void ejecutar();
    boolean seDetendra();
    void reverse();
    boolean isReversed();
    int getContador();  // Método para obtener el valor actual del contador
}


